--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@
 }
 /* custom properties */
 :root {
-    --bg-black: #141414;
+    --bg-black: #191919;
     --white: #fff;
     --bg-white: #F2F2F2;
     --card-bg-white: #F1F1F1;
     --card-bg-orange: #D87D4A;
     --text-black: #000;
     --border-gray: #979797;
+    --hero-bg: #0E0E0E;
 }
 header{
     background-color: var(--bg-black);
@@ -54,4 +55,29 @@ header nav ul li a:hover{
 .container{
     width: 90%;
     margin: 0 auto;
+}
+
+/* hero */
+.hero{
+    background-color: var(--bg-black);
+    height: 500px;
+}
+.hero .container{
+    display: flex;
+}
+.hero .hero-text{
+    /* width: 50%; */
+    /* padding: 50px; */
+    /* background-color: var(--card-bg-white); */
+    /* border-radius: 10px; */
+    /* flex: 1; */
+}
+
+.hero .hero-image{
+    width: 80%;
+    height: 100%;
+    background-image: url('../assets/home/desktop/image-hero.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
