earphones page done

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ span.orange{
     font-size: 1rem;
 }
 
-.hero-text .new-product{
+.new-product{
     text-transform: uppercase;
     letter-spacing: .5rem;
     font-size: .8rem;
