--- a/css/products.css
+++ b/css/products.css
@@ -7,9 +7,13 @@
 
 .banner h3{
     color: var(--white);
-    text-transform: uppercase;
     text-align: center;
-    letter-spacing: .3rem;
+    letter-spacing: .2rem;
+}
+
+h3{
+    text-transform: uppercase;
+    letter-spacing: .2rem;
 }
 
 
@@ -32,13 +36,13 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    padding-top: 2rem;
 }
 .product-card .product-description h3{
     text-transform: uppercase;
     letter-spacing: .3rem;
     width: 10ch;
     font-size: 2.5rem;
-    
 }
 
 .product-card .product-image{
@@ -47,4 +51,121 @@
 
 .product-card .product-image img{
     width: 100%;
+}
+
+/* product details */
+
+.product-card span.nav{
+    display: block;
+    padding: 2rem 0;
+}
+
+.product-card span.nav a{
+    color: var(--border-gray);
+}
+
+.main-btn-group{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 1rem;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.plus-minus-group{
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    padding: 1rem 1rem;
+    background-color: var(--card-bg-white);
+    gap: 1rem;
+}
+
+.features{
+    display: flex;
+    align-items: baseline;
+    gap: 3rem;
+    margin-bottom: 9rem;
+}
+
+.features .features-description{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-top: 2rem;
+}
+
+.features .in-the-box{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}   
+
+.features .in-the-box ul li span{
+    padding-right: 1rem;
+}
+
+/* products-gallery */
+
+.product-gallery{
+
+}
+
+.product-gallery-images{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+}
+
+.mini-images{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.mini-images img{
+    width: 100%;
+    display: block;
+}
+
+.large-image{
+ background-image: url(../assets/product-xx99-mark-two-headphones/desktop/image-gallery-3.jpg);
+ width: 100%;
+ background-size: cover;
+ background-repeat: no-repeat;
+ background-position: center;
+}
+
+.large-image img{
+    width: 100%;
+}
+
+
+.you-may-also-like{
+    display: flex;
+    margin: 3rem 0;
+    justify-content: space-between;
+}
+
+.ymal-card{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: center;
+}
+
+.ymal-card img{
+    width: 100%;
+}
+
+.ymal-title{
+    text-transform: uppercase;
+    text-align: center;
+    margin: 3rem 0 -2rem 0;
 }
